# fenics-pde-minilab

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: reproduce.yml
docs/: cv_bullets.md  method_notes.md
figures/: .gitkeep
results/: .gitkeep  heat_convergence.csv  poisson_convergence.csv  poisson_error_summary.csv
scripts/: _bootstrap.py  check_outputs.py  clean_results.py  reproduce_all.py  run_heat.py  run_poisson.py
src/fenics_pde_minilab/: __init__.py  backend.py  errors.py  heat.py  plotting.py  poisson.py  reporting.py
tests/: test_check_outputs.py  test_manufactured_solution.py  test_reproducibility_contract.py
